# gobang_cpp

./: CMakeLists.txt  LICENSE  README.md
include/: file.hpp  gui.hpp  judge.hpp  pve.hpp  widgets_table.h
include/SDL3/: SDL_revision.h
src/: file.cpp  gui.cpp  judge.cpp  main.cpp  pve.cpp
test/: main_file.cpp  main_gui.cpp  main_judge.cpp  main_pve.cpp  main_pve_full_ver1.cpp  main_pve_full_ver2.cpp  main_pve_full_ver3.cpp
